# cpptorch

./: CMakeLists.txt  README.md  main.cpp
include/: network.h
src/: main.cpp
